Fix explicit warnings in dark mode

--- a/freesound/static/bw-frontend/styles/variables/dark-theme.scss
+++ b/freesound/static/bw-frontend/styles/variables/dark-theme.scss
@@ -36,6 +36,8 @@
     
     $color-footer: #0f0f1b;
 
+    $explicit-sound-overlay: rgba(#141424,0.5);
+
 
     // Redefine logos
     $logo-navbar: 'assets/logos/logo-white.svg';
